"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

------------------------------------------------------------------------------
Changes for 1.7.0:

common/client.h: synced client version to 1023.
gtk/win32/config.h: changed version numbers.
gtk/win32/gtkclient.nsi: added scripting documentation. Checks for GTK.
gtk/win32/Win32Changes.txt: updated.
Ryo 2004-04-25

gtk/win32/porting.c: tweaked SDL's sound support to use panning information.
   Added missing header files.
Ryo 2004-04-11

gtk/win32/porting.c: implemented basic sound with PlaySound.
gtk/win32/gtkclient.dsp: added winmm.lib to link list.
Ryo 2004-04-11

This is related to Win32 scripting. It now works correctly thanks
to archaios's patch. I tweaked it some, so if it doesn't work,
my mistake :)

common/metaserver.c: call 'script_killall' under Win32 when exiting.
common/script.c: some Win32-specific magic to make it work.
common/script.h: add Win32-specific function.
gtk/gtkproto.h: Win32-specific function.
gtk/gx11.c: call the scripting functions for Win32, not like other platforms.
Ryo 2004-04-04

common/metaserver.c: use 'draw_info' to report being unable to connect
   to metaserver. Also changed failure color from red to black, so it appears
   after the 'trying to connect' even in split window mode.
gtk/gx11.c: correctly refresh text windows so failure messages appear.
Ryo 2004-03-12

gtk/keys.c: Windows now uses default 'keys' file if player file not found for
   key loading.
Ryo 2004-03-04

configure.in: Remove checks for gnome libraries, since we no longer use 
gnome/build a gnome client.
aclocal.m4: downgrade requirement for needed autoconf version.
MSW 2004-02-05

common/init.c: changed 'printf' to 'LOG' for HOME Win32-warning
Ryo 2004-02-01

common/image.c: fix stupid crashing mistake.
common/rcs-id.h: remove ; after #define
gtk/rcs-id.h: remove ; after #define
gtk/sound.c: #ifndef WIN32 for cfsndserv specific parts
Ryo 2004-01-30
